chgmgmt_build/src/objects/Competency__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Level__c</fullName>
        <label>保有レベル</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Skilled</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Strategic Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comp_class__c</fullName>
        <label>コンピテンシー種別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ファンクショナル・コンピテンシー</fullName>
                </value>
                <value>
                    <fullName>リーダーシップ・コンピテンシー</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competency__c</fullName>
        <label>コンピテンシー</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Group__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <formula>Employee__r.FullName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>従業員名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>従業員番号</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>保有スキル</relationshipLabel>
        <relationshipName>Comp_to_Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>グループ</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Comp_class__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobProfileName__c</fullName>
        <formula>JobProfile__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ジョブプロファイル名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ジョブプロファイル</label>
        <referenceTo>JobProfile__c</referenceTo>
        <relationshipLabel>必要スキル</relationshipLabel>
        <relationshipName>Comp_to_JobProfile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Level__c</fullName>
        <label>ターゲット・レベル</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Skilled</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Strategic Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>コンピテンシー</label>
    <nameField>
        <displayFormat>COMP-{000}</displayFormat>
        <label>コンピテンシーNo</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>JobProfile</fullName>
        <active>true</active>
        <description>当該ジョブプロファイルで必要なファンクショナル・コンピテンシーを入力</description>
        <label>ジョブプロファイル</label>
    </recordTypes>
    <recordTypes>
        <fullName>Skill_Eval</fullName>
        <active>true</active>
        <description>自身のファンクショナル・コンピテンシーの保有レベルを入力</description>
        <label>スキル評価</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SkillManagerCheckedOn</fullName>
        <active>true</active>
        <description>直属の上司従業員以外は、保有スキルを保存（新規・編集）する前に「保有スキル上司チェック」を外す。</description>
        <errorConditionFormula>RecordType.DeveloperName = &quot;Skill_Eval&quot; &amp;&amp; Employee__r.SkillManagerChecked__c &amp;&amp; $User.Id &lt;&gt; Employee__r.Manager__r.User__c</errorConditionFormula>
        <errorMessage>保有スキルを保存（新規・編集）する前に「保有スキル上司チェック」を外して下さい。</errorMessage>
    </validationRules>
</CustomObject>